syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "cable_message.proto";
import "generic_message.proto";

// cable
message CableListRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message CableListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Cable cable = 3;
}

message CableLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message CablePullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message CablePullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Cable cable = 3;
}

service CableService {
    rpc Create(pb.Cable) returns (pb.Cable) {}
    rpc Update(pb.Cable) returns (pb.Cable) {}
    rpc View(pb.Id) returns (pb.Cable) {}
    rpc Name(pb.Name) returns (pb.Cable) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(CableListRequest) returns (CableListResponse) {}
    rpc Link(CableLinkRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Cable) {}
    rpc Pull(CablePullRequest) returns (CablePullResponse) {}
    rpc Sync(pb.Cable) returns (pb.MyBool) {}
}

// wire
message WireListRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string cable_id = 3;
    string tags = 4;
    string type = 5;
}

message WireListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Wire wire = 3;
}

message WirePullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
    string cable_id = 4;
    string type = 5;
}

message WirePullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Wire wire = 3;
}

message WirePullValueRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
    string cable_id = 4;
}

message WirePullValueResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.WireValueUpdated wire = 3;
}

service WireService {
    rpc Create(pb.Wire) returns (pb.Wire) {}
    rpc Update(pb.Wire) returns (pb.Wire) {}
    rpc View(pb.Id) returns (pb.Wire) {}
    rpc Name(pb.Name) returns (pb.Wire) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(WireListRequest) returns (WireListResponse) {}
    rpc GetValue(pb.Id) returns (pb.WireValue) {}
    rpc SetValue(pb.WireValue) returns (pb.MyBool) {}
    rpc SetValueUnchecked(pb.WireValue) returns (pb.MyBool) {}
    rpc GetValueByName(pb.Name) returns (pb.WireNameValue) {}
    rpc SetValueByName(pb.WireNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameUnchecked(pb.WireNameValue) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Wire) {}
    rpc Pull(WirePullRequest) returns (WirePullResponse) {}
    rpc Sync(pb.Wire) returns (pb.MyBool) {}
    rpc ViewValue(pb.Id) returns (pb.WireValueUpdated) {}
    rpc DeleteValue(pb.Id) returns (pb.MyBool) {}
    rpc PullValue(WirePullValueRequest) returns (WirePullValueResponse) {}
    rpc SyncValue(pb.WireValue) returns (pb.MyBool) {}
}
